--- a/assets/css/_settings.scss
+++ b/assets/css/_settings.scss
@@ -3,8 +3,11 @@
 :root {
   font-size: vars.$base-font-size;
   font-family: Montserrat, sans-serif;
-  color: vars.$font-color;
-  background-color: vars.$bg-color;
+}
+
+html {
+  scroll-behavior: smooth;
+  line-height: 1;
 }
 
 html,
@@ -51,6 +54,10 @@ h2,
 h3,
 h4,
 h5 {
+  margin: 0;
+}
+
+p {
   margin: 0;
 }
 
