--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -9,6 +9,16 @@ $container-max-width: 1568px;
 $header-height: 60px;
 $header-height-lg: 80px;
 
+$container-inline-padding: 16px;
+$container-inline-padding-sm: 32px;
+$container-inline-padding-lg: 48px;
+
 $transition-duration: 0.2s;
 $transition-function: ease;
+
+$header-z-index: 10;
+$spinner-z-index: 15;
+$overlay-z-index: 20;
+
+
 
