--- a/assets/css/_colors.scss
+++ b/assets/css/_colors.scss
@@ -1,15 +1,10 @@
-:root {
-  --primary: var(--p-yellow-300);
-  --secondary: var(--p-gray-800);
+$primary: #fde047;
+$secondary: #1f2937;
 
-  --hover: var(--p-red-600);
-  --active: var(--p-red-400);
+$alert: #dc2626;
+$alertLight: #f87171;
 
-  --spinner-overlay: rgba(0, 0, 0, 0.3);
-  
+$overlay: rgba($secondary, 0.6);
+$spinnerScreenOverlay: rgba($secondary, 0.3);
 
-  // select
-  --p-select-border-color: var(--secondary);
-  --p-select-focus-border-color: var(--active);
-  --p-select-option-focus-background: var(--p-gray-200);
-}
+$boxShadow: 0px 0px 8px 2px rgba($secondary, 0.15);
