--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -12,6 +12,10 @@ $header-height-lg: 80px;
 $container-inline-padding: 16px;
 $container-inline-padding-sm: 32px;
 $container-inline-padding-lg: 48px;
+$container-padding-top: 16px;
+$container-padding-top-sm: 24px;
+$container-padding-top-md: 32px;
+$container-padding-top-lg: 40px;
 
 $transition-duration: 0.2s;
 $transition-function: ease;
@@ -19,6 +23,14 @@ $transition-function: ease;
 $header-z-index: 10;
 $spinner-z-index: 15;
 $overlay-z-index: 20;
+
+$primary: #fde047;
+$secondary: #1f2937;
+$alert: #dc2626;
+$alertLight: #f87171;
+$overlay: rgba($secondary, 0.6);
+$spinnerScreenOverlay: rgba($secondary, 0.3);
+$boxShadow: 0px 0px 8px 2px rgba($secondary, 0.15);
 
 
 
