--- a/assets/css/_settings.scss
+++ b/assets/css/_settings.scss
@@ -16,6 +16,10 @@ body,
   min-height: 100vh;
 }
 
+body {
+  background-color: vars.$body;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -62,5 +66,10 @@ p {
 }
 
 a, button {-webkit-tap-highlight-color: transparent;}
+
+::selection {
+  background-color: vars.$primary;
+  color: vars.$secondary;
+}
 
 
