--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,21 +1,14 @@
 $base-font-size: 16px;
 
-$sm-screen: "(min-width: 640px)";
-$md-screen: "(min-width: 768px)";
-$lg-screen: "(min-width: 1024px)";
-$xl-screen: "(min-width: 1280px)";
+$sm-screen: "(min-width: 540px)";
+$md-screen: "(min-width: 640px)";
+$lg-screen: "(min-width: 768px)";
+$xl-screen: "(min-width: 1024px)";
+$xxl-screen: "(min-width: 1280px)";
 
 $container-max-width: 1568px;
 $header-height: 60px;
-$header-height-lg: 80px;
-
-$container-inline-padding: 16px;
-$container-inline-padding-sm: 32px;
-$container-inline-padding-lg: 40px;
-$container-padding-top: 16px;
-$container-padding-top-sm: 20px;
-$container-padding-top-md: 28px;
-$container-padding-top-lg: 32px;
+$header-height-xxl: 80px;
 
 $transition-duration: 0.2s;
 $transition-function: ease;
@@ -28,9 +21,7 @@ $primary: #fde047;
 $secondary: #1f2937;
 $alert: #dc2626;
 $alertLight: #f87171;
+$body: #fff;
 $overlay: rgba($secondary, 0.6);
 $spinnerScreenOverlay: rgba($secondary, 0.3);
 $boxShadow: 0px 0px 8px 2px rgba($secondary, 0.15);
-
-
-
