--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -18,7 +18,10 @@ $spinner-z-index: 15;
 $overlay-z-index: 20;
 
 $primary: #fde047;
+$primary50: #fefce8;
 $secondary: #1f2937;
+$secondary300: #d1d5db;
+$secondary500: #6b7280;
 $alert: #dc2626;
 $alertLight: #f87171;
 $body: #fff;
